<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- SECTION HEADER: MAIN -->
    <item
        android:id="@+id/nav_header_main"
        android:enabled="false"
        android:title="MAIN" />

    <!-- MAIN -->
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/nav_dashboard"
            android:checkable="true" />

        <item
            android:id="@+id/nav_browse_houses"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_browse_houses"
            android:checkable="true" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_border"
            android:title="@string/nav_favorites"
            android:checkable="true" />

        <item
            android:id="@+id/nav_my_listings"
            android:icon="@drawable/ic_house"
            android:title="@string/nav_properties"
            android:checkable="true" />

        <!-- Legacy ID mapping -->
        <item
            android:id="@+id/nav_properties"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_properties"
            android:checkable="true"
            android:visible="false" />

        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/ic_check"
            android:title="@string/my_bookings"
            android:checkable="true" />

        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/ic_reminder"
            android:title="@string/nav_payments"
            android:checkable="true" />

    </group>

    <!-- SECTION HEADER: SUPPORT -->
    <item
        android:id="@+id/nav_header_support"
        android:enabled="false"
        android:title="SUPPORT" />

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/nav_help" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/nav_feedback" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/nav_contact" />
    </group>

    <!-- SECTION HEADER: ACCOUNT -->
    <item
        android:id="@+id/nav_header_account"
        android:enabled="false"
        android:title="ACCOUNT" />

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_user"
            android:title="Profile" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings"
            android:checkable="true" />


        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/nav_share"
            android:checkable="true" />


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            android:checkable="true" />


    </group>

</menu>
